Segragate IT to unit tests. and make em work