@@ -61,6 +61,10 @@ tasks.named('test') {
     jvmArgs(['--enable-preview'])
 }
 
+tasks.named('integrationTest') {
+    jvmArgs(['--enable-preview'])
+}
+
 tasks.named('bootRun') {
     jvmArgs(['--enable-preview'])
 }
